fix text overflow for visa section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,7 @@ display: block;
 
 .category-column {
   margin: 5px 2% 0;
-  column-count: 4;
+  column-count: 3;
   background-color: rgb(248,173,125, 0.2);
   padding: 10px 30px;
   border-radius: 4px;
